src/openim_sdk_ffi.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
typedef struct {
    void (*onMethodChannel)(Dart_Port_DL port, const char*, const char*, const char*, double, const char*);
} CGO_OpenIM_Listener;
typedef long long GoInt64;
typedef GoInt64 GoInt;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;
extern void SignalingAccept(char* operationID, char* signalAcceptReq);
extern void SignalingReject(char* operationID, char* signalRejectReq);
extern void SignalingCancel(char* operationID, char* signalCancelReq);
extern void SignalingHungUp(char* operationID, char* signalHungUpReq);
extern void SignalingGetRoomByGroupID(char* operationID, char* groupID);
extern void SignalingGetTokenByRoomID(char* operationID, char* groupID);
extern void GetSubDepartment(char* operationID, char* departmentID, int offset, int size);
extern void GetDepartmentMember(char* operationID, char* departmentID, int offset, int size);
extern void GetUserInDepartment(char* operationID, char* userID);
extern void GetDepartmentMemberAndSubDepartment(char* operationID, char* departmentID);
extern void GetParentDepartmentList(char* operationID, char* departmentID);
extern void GetDepartmentInfo(char* operationID, char* departmentID);
extern void SearchOrganization(char* operationID, char* input, int offset, int count);
extern void GetWorkMomentsUnReadCount(char* operationID);
extern void GetWorkMomentsNotification(char* operationID, int offset, int count);
extern void ClearWorkMomentsNotification(char* operationID);
extern void UpdateFcmToken(char* operationID, char* fmcToken);
extern void SetAppBadge(char* operationID, int32_t appUnreadCount);