lib/openim_sdk_ffi_bindings_generated.dart


  void SignalingAccept(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> signalAcceptReq,
  ) {
    return _SignalingAccept(
      operationID,
      signalAcceptReq,
    );
  }

  late final _SignalingAcceptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SignalingAccept');
  late final _SignalingAccept = _SignalingAcceptPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SignalingReject(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> signalRejectReq,
  ) {
    return _SignalingReject(
      operationID,
      signalRejectReq,
    );
  }

  late final _SignalingRejectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SignalingReject');
  late final _SignalingReject = _SignalingRejectPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SignalingCancel(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> signalCancelReq,
  ) {
    return _SignalingCancel(
      operationID,
      signalCancelReq,
    );
  }

  late final _SignalingCancelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SignalingCancel');
  late final _SignalingCancel = _SignalingCancelPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SignalingHungUp(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> signalHungUpReq,
  ) {
    return _SignalingHungUp(
      operationID,
      signalHungUpReq,
    );
  }

  late final _SignalingHungUpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SignalingHungUp');
  late final _SignalingHungUp = _SignalingHungUpPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SignalingGetRoomByGroupID(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _SignalingGetRoomByGroupID(
      operationID,
      groupID,
    );
  }

  late final _SignalingGetRoomByGroupIDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SignalingGetRoomByGroupID');
  late final _SignalingGetRoomByGroupID =
      _SignalingGetRoomByGroupIDPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SignalingGetTokenByRoomID(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _SignalingGetTokenByRoomID(
      operationID,
      groupID,
    );
  }

  late final _SignalingGetTokenByRoomIDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SignalingGetTokenByRoomID');
  late final _SignalingGetTokenByRoomID =
      _SignalingGetTokenByRoomIDPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetSubDepartment(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> departmentID,
    int offset,
    int size,
  ) {
    return _GetSubDepartment(
      operationID,
      departmentID,
      offset,
      size,
    );
  }

  late final _GetSubDepartmentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int, ffi.Int)>>('GetSubDepartment');
  late final _GetSubDepartment = _GetSubDepartmentPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int)>();

  void GetDepartmentMember(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> departmentID,
    int offset,
    int size,
  ) {
    return _GetDepartmentMember(
      operationID,
      departmentID,
      offset,
      size,
    );
  }

  late final _GetDepartmentMemberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int, ffi.Int)>>('GetDepartmentMember');
  late final _GetDepartmentMember = _GetDepartmentMemberPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int)>();

  void GetUserInDepartment(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userID,
  ) {
    return _GetUserInDepartment(
      operationID,
      userID,
    );
  }

  late final _GetUserInDepartmentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetUserInDepartment');
  late final _GetUserInDepartment = _GetUserInDepartmentPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetDepartmentMemberAndSubDepartment(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> departmentID,
  ) {
    return _GetDepartmentMemberAndSubDepartment(
      operationID,
      departmentID,
    );
  }

  late final _GetDepartmentMemberAndSubDepartmentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetDepartmentMemberAndSubDepartment');
  late final _GetDepartmentMemberAndSubDepartment =
      _GetDepartmentMemberAndSubDepartmentPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetParentDepartmentList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> departmentID,
  ) {
    return _GetParentDepartmentList(
      operationID,
      departmentID,
    );
  }

  late final _GetParentDepartmentListPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetParentDepartmentList');
  late final _GetParentDepartmentList = _GetParentDepartmentListPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetDepartmentInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> departmentID,
  ) {
    return _GetDepartmentInfo(
      operationID,
      departmentID,
    );
  }

  late final _GetDepartmentInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetDepartmentInfo');
  late final _GetDepartmentInfo = _GetDepartmentInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SearchOrganization(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> input,
    int offset,
    int count,
  ) {
    return _SearchOrganization(
      operationID,
      input,
      offset,
      count,
    );
  }

  late final _SearchOrganizationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int, ffi.Int)>>('SearchOrganization');
  late final _SearchOrganization = _SearchOrganizationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int)>();

  void GetWorkMomentsUnReadCount(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetWorkMomentsUnReadCount(
      operationID,
    );
  }

  late final _GetWorkMomentsUnReadCountPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetWorkMomentsUnReadCount');
  late final _GetWorkMomentsUnReadCount = _GetWorkMomentsUnReadCountPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void GetWorkMomentsNotification(
    ffi.Pointer<ffi.Char> operationID,
    int offset,
    int count,
  ) {
    return _GetWorkMomentsNotification(
      operationID,
      offset,
      count,
    );
  }

  late final _GetWorkMomentsNotificationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Int)>>('GetWorkMomentsNotification');
  late final _GetWorkMomentsNotification = _GetWorkMomentsNotificationPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>, int, int)>();

  void ClearWorkMomentsNotification(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _ClearWorkMomentsNotification(
      operationID,
    );
  }

  late final _ClearWorkMomentsNotificationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'ClearWorkMomentsNotification');
  late final _ClearWorkMomentsNotification = _ClearWorkMomentsNotificationPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void UpdateFcmToken(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> fmcToken,
  ) {
    return _UpdateFcmToken(
      operationID,
      fmcToken,
    );
  }

  late final _UpdateFcmTokenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('UpdateFcmToken');
  late final _UpdateFcmToken = _UpdateFcmTokenPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetAppBadge(
    ffi.Pointer<ffi.Char> operationID,
    int appUnreadCount,
  ) {
    return _SetAppBadge(
      operationID,
      appUnreadCount,
    );
  }

  late final _SetAppBadgePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int32)>>('SetAppBadge');
  late final _SetAppBadge =
      _SetAppBadgePtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int)>();
}

final class _GoString_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> p;

  @ptrdiff_t()
  external int n;
}

typedef ptrdiff_t = __darwin_ptrdiff_t;
typedef __darwin_ptrdiff_t = ffi.Long;

final class CGO_OpenIM_Listener extends ffi.Struct {
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(
              Dart_Port_DL,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Pointer<ffi.Char>)>> onMethodChannel;
}

/// ============================================================================
/// IMPORTANT! Never update these signatures without properly updating
/// DART_API_DL_MAJOR_VERSION and DART_API_DL_MINOR_VERSION.
///
/// Verbatim copy of `dart_native_api.h` and `dart_api.h` symbol names and types
/// to trigger compile-time errors if the symbols in those files are updated
/// without updating these.
///
/// Function return and argument types, and typedefs are carbon copied. Structs
/// are typechecked nominally in C/C++, so they are not copied, instead a
/// comment is added to their definition.
typedef Dart_Port_DL = ffi.Int64;

final class GoInterface extends ffi.Struct {
  external ffi.Pointer<ffi.Void> t;

  external ffi.Pointer<ffi.Void> v;
}

final class GoSlice extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @GoInt()
  external int len;

  @GoInt()
  external int cap;
}

typedef GoInt = GoInt64;
typedef GoInt64 = ffi.LongLong;
